--- a/Climate.ipynb
+++ b/Climate.ipynb
@@ -10,11 +10,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "0805844c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting meteostat\n",
+      "  Downloading meteostat-1.6.1-py3-none-any.whl (30 kB)\n",
+      "Requirement already satisfied: numpy in c:\\users\\theoh\\anaconda3\\envs\\gage\\lib\\site-packages (from meteostat) (1.22.2)\n",
+      "Requirement already satisfied: pandas>=1.1 in c:\\users\\theoh\\anaconda3\\envs\\gage\\lib\\site-packages (from meteostat) (1.4.1)\n",
+      "Requirement already satisfied: pytz in c:\\users\\theoh\\anaconda3\\envs\\gage\\lib\\site-packages (from meteostat) (2021.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\theoh\\anaconda3\\envs\\gage\\lib\\site-packages (from pandas>=1.1->meteostat) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\theoh\\anaconda3\\envs\\gage\\lib\\site-packages (from python-dateutil>=2.8.1->pandas>=1.1->meteostat) (1.16.0)\n",
+      "Installing collected packages: meteostat\n",
+      "Successfully installed meteostat-1.6.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install meteostat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3753ea63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "30e976fc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def climate(location, start, end):\n",
+    "    return df"
+   ]
   }
  ],
  "metadata": {
