--- a/Prec.ipynb
+++ b/Prec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4ea6126f",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "cf5b26fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prec_hourly = pd.read_csv('data/MODIS/precipitation.csv')"
+    "prec_hourly = pd.read_csv('data/MODIS/prec_sum.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b3595e87",
    "metadata": {},
    "outputs": [
@@ -55,27 +55,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>20140301_0000</td>\n",
-       "      <td>0.314555</td>\n",
+       "      <td>1.517263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>20140301_0100</td>\n",
-       "      <td>0.215825</td>\n",
+       "      <td>1.041036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>20140301_0200</td>\n",
-       "      <td>0.001990</td>\n",
+       "      <td>0.009600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>20140301_0300</td>\n",
-       "      <td>0.001698</td>\n",
+       "      <td>0.008192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>20140301_0400</td>\n",
-       "      <td>0.000853</td>\n",
+       "      <td>0.004113</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -83,14 +83,14 @@
       ],
       "text/plain": [
        "            date  hourlyPrecipRate\n",
-       "0  20140301_0000          0.314555\n",
-       "1  20140301_0100          0.215825\n",
-       "2  20140301_0200          0.001990\n",
-       "3  20140301_0300          0.001698\n",
-       "4  20140301_0400          0.000853"
+       "0  20140301_0000          1.517263\n",
+       "1  20140301_0100          1.041036\n",
+       "2  20140301_0200          0.009600\n",
+       "3  20140301_0300          0.008192\n",
+       "4  20140301_0400          0.004113"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "51295455",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "508e9947",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "f389bfce",
    "metadata": {
     "scrolled": true
@@ -172,23 +172,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2014-03-01 00:00:00</th>\n",
-       "      <td>0.314555</td>\n",
+       "      <td>1.517263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-03-01 01:00:00</th>\n",
-       "      <td>0.215825</td>\n",
+       "      <td>1.041036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-03-01 02:00:00</th>\n",
-       "      <td>0.001990</td>\n",
+       "      <td>0.009600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-03-01 03:00:00</th>\n",
-       "      <td>0.001698</td>\n",
+       "      <td>0.008192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-03-01 04:00:00</th>\n",
-       "      <td>0.000853</td>\n",
+       "      <td>0.004113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -208,11 +208,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-12-31 22:00:00</th>\n",
-       "      <td>0.026846</td>\n",
+       "      <td>0.129492</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-12-31 23:00:00</th>\n",
-       "      <td>0.000802</td>\n",
+       "      <td>0.003869</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -222,22 +222,22 @@
       "text/plain": [
        "                     hourlyPrecipRate\n",
        "date                                 \n",
-       "2014-03-01 00:00:00          0.314555\n",
-       "2014-03-01 01:00:00          0.215825\n",
-       "2014-03-01 02:00:00          0.001990\n",
-       "2014-03-01 03:00:00          0.001698\n",
-       "2014-03-01 04:00:00          0.000853\n",
+       "2014-03-01 00:00:00          1.517263\n",
+       "2014-03-01 01:00:00          1.041036\n",
+       "2014-03-01 02:00:00          0.009600\n",
+       "2014-03-01 03:00:00          0.008192\n",
+       "2014-03-01 04:00:00          0.004113\n",
        "...                               ...\n",
        "2017-12-31 19:00:00          0.000000\n",
        "2017-12-31 20:00:00          0.000000\n",
        "2017-12-31 21:00:00          0.000000\n",
-       "2017-12-31 22:00:00          0.026846\n",
-       "2017-12-31 23:00:00          0.000802\n",
+       "2017-12-31 22:00:00          0.129492\n",
+       "2017-12-31 23:00:00          0.003869\n",
        "\n",
        "[33648 rows x 1 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "127699ab",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "a6c2eedf",
    "metadata": {},
    "outputs": [
@@ -301,23 +301,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2014-03-01</th>\n",
-       "      <td>0.619397</td>\n",
+       "      <td>2.987678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-03-02</th>\n",
-       "      <td>0.526817</td>\n",
+       "      <td>2.541117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-03-03</th>\n",
-       "      <td>16.570071</td>\n",
+       "      <td>79.926226</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-03-04</th>\n",
-       "      <td>1.718126</td>\n",
+       "      <td>8.287433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-03-05</th>\n",
-       "      <td>28.216512</td>\n",
+       "      <td>136.103179</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -329,19 +329,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-12-28</th>\n",
-       "      <td>6.014218</td>\n",
+       "      <td>29.009759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-12-29</th>\n",
-       "      <td>79.895810</td>\n",
+       "      <td>385.379790</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-12-30</th>\n",
-       "      <td>10.955626</td>\n",
+       "      <td>52.844785</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-12-31</th>\n",
-       "      <td>0.028952</td>\n",
+       "      <td>0.139652</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -351,22 +351,22 @@
       "text/plain": [
        "            hourlyPrecipRate\n",
        "date                        \n",
-       "2014-03-01          0.619397\n",
-       "2014-03-02          0.526817\n",
-       "2014-03-03         16.570071\n",
-       "2014-03-04          1.718126\n",
-       "2014-03-05         28.216512\n",
+       "2014-03-01          2.987678\n",
+       "2014-03-02          2.541117\n",
+       "2014-03-03         79.926226\n",
+       "2014-03-04          8.287433\n",
+       "2014-03-05        136.103179\n",
        "...                      ...\n",
        "2017-12-27          0.000000\n",
-       "2017-12-28          6.014218\n",
-       "2017-12-29         79.895810\n",
-       "2017-12-30         10.955626\n",
-       "2017-12-31          0.028952\n",
+       "2017-12-28         29.009759\n",
+       "2017-12-29        385.379790\n",
+       "2017-12-30         52.844785\n",
+       "2017-12-31          0.139652\n",
        "\n",
        "[1402 rows x 1 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
